chore: rollback to enabled preview