@@ -116,6 +116,7 @@
                         <source>21</source>
                         <target>21</target>
                         <compilerArgs>
+                            <arg>--enable-preview</arg>
                             <arg>--add-modules</arg>
                             <arg>jdk.incubator.vector</arg>
                         </compilerArgs>
@@ -200,7 +201,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>@{argLine} -Xmx2048m --add-opens java.base/java.lang=ALL-UNNAMED
+                    <argLine>@{argLine} -Xmx2048m --enable-preview --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens
                         java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens
